--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,12 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-rc01")
     implementation("androidx.lifecycle:lifecycle-service:2.4.1")
 
+    // Testing
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha06'
+    testImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation "io.mockk:mockk:1.12.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
+
 }
